addons/azure-webapprouting-ingress-controller/deployment.yaml
# foo app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "echo \"You've hit $(hostname)!\" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
---
# bar app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "echo \"You've hit $(hostname)!\" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
